--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>แนะนำหนังสือ ฟลอร่า ลิตเติ้ลเลดี้ เล่ม 6 ชนชั้นในยุควิกตอเรียกับตัวตนที่หายไป ฉบับการ์ตูน โดย Yeoreum</title>
+    <title>แนะนำหนังสือ <br>ฟลอร่า ลิตเติ้ลเลดี้ เล่ม 6 ชนชั้นในยุควิกตอเรียกับตัวตนที่หายไป ฉบับการ์ตูน โดย Yeoreum</title>
     <mata name="keywords" content="ลา ฟลอร่า ลิตเติ้ลเลดี้ เล่ม 6,ชนชั้นในยุควิกตอเรีย,ตัวตนที่หายไป,การ์ตูน,หนังสือการ์ตูน,นิยาย,หนังสือเด็ก,หนังสือนิยาย,ยุควิกตอเรีย,การ์ตูนไทย"></mata> 
     <mata name="description" content="หนังสือ ลา ฟลอร่า ลิตเติ้ลเลดี้ เล่ม 6 ชนชั้นในยุควิกตอเรียกับตัวตนที่หายไป ฉบับการ์ตูน เปิดประตูสู่โลกที่หรูหราและซับซ้อนของยุควิกตอเรีย ขณะที่เรื่องราวนี้เชื่อมโยงความสนุกสนานของการ์ตูนเข้ากับการเล่าที่ละเอียดอ่อนและลึกซึ้ง ทำให้ผู้อ่านทุกเพศทุกวัยต้องตกหลุมรักไปพร้อม ๆ กัน"></mata>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
@@ -85,10 +85,10 @@
         const images = [
             	"images/ปก.jpeg",
 				"images/1.jpeg",
-                "images/2.jpeg",
+             "images/2.jpeg",
 			    "images/3.jpeg",
 			    "images/4.jpeg",
-               "imimages/back.jpeg"
+             "images/back.jpeg"
         ];
 
         function changeImage(container) {
@@ -115,9 +115,9 @@
                     
             </div>
             <div class="col-md-6">
-                <br><h3>
-                    ทำความรู้จักหนังสือ ลา ฟลอร่า ลิตเติ้ลเลดี้ เล่ม 6 <br>ชนชั้นในยุควิกตอเรียกับตัวตนที่หายไป ฉบับการ์ตูน
-                </h3>
+                <br><h1>
+                    ทำความรู้จักหนังสือ <br>ลา ฟลอร่า ลิตเติ้ลเลดี้ เล่ม 6 <br>ชนชั้นในยุควิกตอเรีย <br>กับตัวตนที่หายไป <br>ฉบับการ์ตูน
+                </h1>
                 <br><p1>
                     หนังสือ "ลา ฟลอร่า ลิตเติ้ลเลดี้ เล่ม 6 ชนชั้นในยุควิกตอเรียกับตัวตนที่หายไป ฉบับการ์ตูน" เปิดประตูสู่โลกที่หรูหราและซับซ้อนของยุควิกตอเรีย ขณะที่เรื่องราวนี้เชื่อมโยงความสนุกสนานของการ์ตูนเข้ากับการเล่าที่ละเอียดอ่อนและลึกซึ้ง ทำให้ผู้อ่านทุกเพศทุกวัยต้องตกหลุมรักไปพร้อมๆ กัน</p1><br>
                 <br><p><strong>ผู้เขียน</strong></p>ภาสกร กฤษสมัย<br>
@@ -234,24 +234,3 @@
 
 
 </div>
-	
-	
-	
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-  </body>
-</html>
