--- a/index.html
+++ b/index.html
@@ -87,8 +87,7 @@
 				"images/1.jpeg",
              "images/2.jpeg",
 			    "images/3.jpeg",
-			    "images/4.jpeg",
-             "images/back.jpeg"
+			    "images/4.jpeg"
         ];
 
         function changeImage(container) {
