--- a/index.html
+++ b/index.html
@@ -88,6 +88,7 @@
              "images/2.jpeg",
 			    "images/3.jpeg",
 			    "images/4.jpeg"
+				"images/back.jpeg"
         ];
 
         function changeImage(container) {
