--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
             <div class="container">
                 <div class="row">
                     <footer>
-                        <p>เว็บไซต์นี้เป็นส่วนหนึ่งของวิชา 436301 เทคโนโลยีเว็บเพื่อการนำเสนอสารสนเทศ (Web Technology for Information Presentation)</p>
+                        <p>เว็บไซต์นี้เป็นส่วนหนึ่งของวิชา 436301 เทคโนโลยีเว็บเพื่อการนำเสนอสารสนเทศ<br>(Web Technology for Information Presentation)</p>
                         <p>created by Yeoreum</p>
                     </footer>
                 </div>
