--- a/index.html
+++ b/index.html
@@ -112,9 +112,9 @@
             </div>
     
                     <!-- รายละเอียดหนังสือ -->
-                    <div class="row text-center">
+                    <div class="row">
                         <div class="col-md-12">
-                        <p><strong>รายละเอียดหนังสือ</strong></p><br>
+                        <p><strong>รายละเอียดหนังสือ</strong></p>
                         <p>ISBN : 9786162572968 (ปกอ่อน) 160 หน้า</p>
                         <p>ขนาดรูปเล่ม : 145 x 210 x 8 มม.</p>
                         <p>น้ำหนัก : 215 กรัม</p>
@@ -285,8 +285,8 @@
                 <!-- ผู้จัดทำ -->
                 <div class="row text-center">
                     <div class="col-md-12 image-container">
-                        <img src="images/pro.jpeg" width="300" height="300" class="circle-image"><br>
-                        <p>ถ้าชอบไม่ชอบยังไงก็สามารถติชมกันได้นะคะ :) แต่อย่าไม่ชอบเลย ชอบบ้างอะไรบ้างก็ดี อะล้อเล่น~</p><br>
+                        <img src="images/pro.jpeg" width="300" height="300" class="circle-image">
+                        <p>ถ้าชอบไม่ชอบยังไงก็สามารถติชมกันได้นะคะ :) แต่อย่าไม่ชอบเลย ชอบบ้างอะไรบ้างก็ดี อะล้อเล่น~</p>
                     </div>
                 </div>
     
@@ -302,6 +302,60 @@
                 </div>
             </div>
     </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   </body>
