--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
                 <div class="row text-center">
                     <div class="col-md-12 image-container">
                         <img src="images/pro.jpeg" width="300" height="300" class="circle-image">
-                        <p>ถ้าชอบไม่ชอบยังไงก็สามารถติชมกันได้นะคะ :) แต่อย่าไม่ชอบเลย ชอบบ้างอะไรบ้างก็ดี อะล้อเล่น~</p>
+                        <p><br>ถ้าชอบไม่ชอบยังไงก็สามารถติชมกันได้นะคะ :) แต่อย่าไม่ชอบเลย ชอบบ้างอะไรบ้างก็ดี อะล้อเล่น~</p><br>
                     </div>
                 </div>
     
@@ -301,61 +301,6 @@
                     </footer>
                 </div>
             </div>
-    </div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   </body>
