--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
     
     
         <!-- carousel -->
-        <div class="row">
-            <div class="col-md-6 text-center">
+        <div class="row text-center">
+            <div class="col-md-6">
                     <br><div class="image-container-fluid">
                         <div id="carouselExampleIndicators" class="carousel slide">
                     <div class="carousel-indicators">
