--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     
     
         <!-- carousel -->
-        <div class="row text-center">
+        <div class="row">
             <div class="col-md-6">
                     <br><div class="image-container-fluid">
                         <div id="carouselExampleIndicators" class="carousel slide">
